# project_6412

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: cuboid.sdf  table_top.sdf
config/: config.yaml
scripts/: 2d_paper_vis.py  convex_hull_set_coverage.py  convex_set_cover_test.py  dual_arm_differential_ik.py  dual_arm_ik_testing.py  dual_arm_ik_traj.py  dual_arm_ik_with_cube_traj.py  gcs.py  gcs_runner.py  gcs_testing.py  gcs_traj.py  minimal_env.py  minkowski_vis.py  planner_test.py  set_creation.py  sets_2d_visualization_testing.py  sets_6d_visualization_testing.py  test_environment_build.py  toy_gcs.py  toy_gcs2.py  trajectory_sampling_testing.py  visualize_final_trajectory.py
src/dual_arm_manipulation/: __init__.py  contact_mode.py  environment.py  planner.py  sampler.py  set_creation.py  trajectory_primitives.py  trajopt.py  utils.py  visualization.py
